.apex/src/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>OrderId__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>OrderId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProductId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderItem</label>
    <nameField>
        <label>OrderItem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrederItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>